objects/Migration_Intelligence_Master__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Count__c</fullName>
        <label>Execution Count</label>
        <summarizedField>Migration_Statistics__c.Job_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Statistics__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Statistics__c.Migration_Intelligence_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <summarizedField>Migration_Statistics__c.Time_in_Minutes__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Statistics__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Statistics__c.Migration_Intelligence_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Created__c</fullName>
        <label>Overall Created</label>
        <summarizedField>Migration_Statistics__c.Created__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Statistics__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Statistics__c.Migration_Intelligence_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Failure__c</fullName>
        <label>Overall Failure</label>
        <summarizedField>Migration_Statistics__c.Failed__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Statistics__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Statistics__c.Migration_Intelligence_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Gap__c</fullName>
        <label>Overall Gap</label>
        <summarizedField>Migration_Statistics__c.Migration_Gap__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Statistics__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Statistics__c.Migration_Intelligence_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Goal__c</fullName>
        <label>Overall Goal</label>
        <summarizedField>Migration_Statistics__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Migration_Statistics__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </summaryFilterItems>
        <summaryForeignKey>Migration_Statistics__c.Migration_Intelligence_Master__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Migration Intelligence Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Migration Intelligent Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Intelligent Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>